--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
+    "socket.io": "^2.3.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
