--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "styled-components": "^4.4.0"
