--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
